--- a/assets/scss/statistics_navigation.scss
+++ b/assets/scss/statistics_navigation.scss
@@ -158,7 +158,7 @@ button > p {
 
 #main-container {
   width: 100% !important;
-  padding: 0 1rem 0 1rem !important;
+  padding: calc(var(--navbar-height) + 1.5em) 1rem 0 1rem;
   margin: 0;
 }
 
